fast version of drawing (only 32x32)

--- a/2nmc-demo-gcc-example/make_mc12101/Makefile0
+++ b/2nmc-demo-gcc-example/make_mc12101/Makefile0
@@ -54,12 +54,19 @@ include 		 nmc4vars_win.mk
 #-------------- target & input dirs -------------------
 PROFILE			 = ../src_target0/proflist_generated0.asm
 PROJECT          = main0
+ifdef DEBUG
+PROJECT 		 = main0d
+endif
 OUT_DIR          = .
 TARGET           = $(OUT_DIR)/$(PROJECT).abs
 INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include -I"../include"
 SRC_DIRS         = $(ROOT)/nmglvs_mc12101-gcc/src_nmc0 ../src_target0 ./ ../src_nm
-LIB_DIRS         = -L"$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib" -L$(ROOT)/lib
+LIB_DIRS         = -L"$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib"
+ifdef DEBUG
+TMP_DIR          = Debug
+else
 TMP_DIR          = Release
+endif
 #-------------- RELEASE/ALL config -------------------
 CC 				 = nmc-g++
 CC_FLAGS	 	 = -O2 -fno-builtin-printf -std=c++11 -mnmc4-float
@@ -70,7 +77,7 @@ MAP		         = $(PROJECT).map
 CFG				 = ldscript-nmc0.ld
 LINKER_FLAGS     = -Xlinker -Map=$(MAP) $(LIB_DIRS) "-Wl,-T$(CFG)" -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET) 
 
-ifeq ($(DEBUG),y)
+ifdef DEBUG
 	CC_FLAGS	+= -DDEBUG
 else
 	CC_FLAGS	+= -DNDEBUG
@@ -116,7 +123,7 @@ $(TARGET): $(TMP_DIR) $(OBJECTS) $(ALL_H) $(CFG) nmc4vars_win.mk Makefile
 nmc4vars_win.mk:
 	copy "$(NMC_GCC_TOOLPATH)\nmc4-ide\include\nmc4vars_win.mk" nmc4vars_win.mk
 
-$(OUT_DIR): 
+$(OUT_DIR):
 	-mkdir "$(@)"
 	
 $(TMP_DIR)/%.o: %.asm  $(ALL_H) $(CFG)
@@ -137,7 +144,7 @@ profile:
 #========================== Visual Studio  ===================
 export ALL_CPP ALL_ASM ALL_C ALL_H
 
-PROVIDER = host-x86
+PROVIDER = host-x64
 
 $(PROVIDER).vcxproj :	premake5.lua 
 	premake5 vs2015
@@ -146,7 +153,7 @@ $(PROVIDER).vcproj :	premake5.lua
 	premake5 vs2005
 
 vs2015:   $(PROVIDER).vcxproj
-	"$(VS140COMNTOOLS)vsvars32" && msbuild $(PROVIDER).vcxproj
-#	"$(VS140COMNTOOLS)vsvars32" && msbuild $(PROJECT).vcxproj /p:Configuration=Release
+#	"$(VS140COMNTOOLS)vsvars32" && msbuild $(PROVIDER).vcxproj
+#	"$(VS140COMNTOOLS)vsvars32" && msbuild $(PROJECT).vcxproj /p:Configuration=Release /p:Platform=x64
 
 include $(ROOT)/clean.mk
