--- a/2nmc-demo-gcc/make_mc12101/Makefile0
+++ b/2nmc-demo-gcc/make_mc12101/Makefile0
@@ -47,19 +47,24 @@ ROOT = ../..
 #============== PROJECT & BUILD CONFIGURATION ==========
 #
 
-DEBUG ?= n
-
 include $(ROOT)/global.mk
 include 		 nmc4vars_win.mk
 #-------------- target & input dirs -------------------
 PROFILE			 = ../src_target0/proflist_generated0.asm
 PROJECT          = main0
+ifdef DEBUG
+PROJECT 		 = main0d
+endif
 OUT_DIR          = .
 TARGET           = $(OUT_DIR)/$(PROJECT).abs
 INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include
 SRC_DIRS         = $(ROOT)/nmglvs_mc12101-gcc/src_nmc0 $(ROOT)/src_proc0/common $(ROOT)/src_proc0/nm $(ROOT)/src_proc0/nmgl ../src_target0
 LIB_DIRS         = -L"$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib"
+ifdef DEBUG
+TMP_DIR          = Debug
+else
 TMP_DIR          = Release
+endif
 #-------------- RELEASE/ALL config -------------------
 CC 				 = nmc-g++
 CC_FLAGS	 	 = -O2 -fno-builtin-printf -std=c++11 -mnmc4-float
@@ -70,7 +75,7 @@ MAP		         = $(PROJECT).map
 CFG				 = ldscript-nmc0.ld
 LINKER_FLAGS     = -Xlinker -Map=$(MAP) $(LIB_DIRS) "-Wl,-T$(CFG)" -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET) 
 
-ifeq ($(DEBUG),y)
+ifdef DEBUG
 	CC_FLAGS	+= -DDEBUG
 else
 	CC_FLAGS	+= -DNDEBUG
@@ -149,7 +154,7 @@ profile:
 #========================== Visual Studio  ===================
 export ALL_CPP ALL_ASM ALL_C ALL_H
 
-PROVIDER = host-x86
+PROVIDER = host-x64
 
 $(PROVIDER).vcxproj :	premake5.lua 
 	premake5 vs2015
@@ -158,7 +163,7 @@ $(PROVIDER).vcproj :	premake5.lua
 	premake5 vs2005
 
 vs2015:   $(PROVIDER).vcxproj
-	"$(VS140COMNTOOLS)vsvars32" && msbuild $(PROVIDER).vcxproj
-#	"$(VS140COMNTOOLS)vsvars32" && msbuild $(PROJECT).vcxproj /p:Configuration=Release
+#	"$(VS140COMNTOOLS)vsvars32" && msbuild $(PROVIDER).vcxproj
+#	"$(VS140COMNTOOLS)vsvars32" && msbuild $(PROJECT).vcxproj /p:Configuration=Release /p:Platform=x64
 
 include $(ROOT)/clean.mk
