--- a/2nmc-demo-gcc-example/make_mc12101/Makefile1
+++ b/2nmc-demo-gcc-example/make_mc12101/Makefile1
@@ -59,7 +59,7 @@ OUT_DIR          = .
 TARGET           = $(OUT_DIR)/$(PROJECT).abs
 INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include
 SRC_DIRS         = $(ROOT)/nmglvs_mc12101-gcc/src_nmc1 ../src_target1 ./
-LIB_DIRS         = -L "$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib"
+LIB_DIRS         = -L "$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib" -L$(ROOT)/lib
 ifdef DEBUG
 TMP_DIR          = Debug
 else
