--- a/2nmc-demo-gcc/make_x86/Makefile
+++ b/2nmc-demo-gcc/make_x86/Makefile
@@ -6,6 +6,8 @@ include $(ROOT)/global.mk
 
 .SUFFIXES:
 
+PLATFORM  ?= x64
+CONFIGURATION  ?= Release
 
 TARGET0   = demo3d-target0
 TARGET1   = demo3d-target1
@@ -25,9 +27,12 @@ vs2005: $(HOST).vcproj $(TARGET0).vcproj $(TARGET1).vcproj
 	
 
 vs2015:	$(HOST).vcxproj $(TARGET0).vcxproj $(TARGET1).vcxproj
-	"$(VS140COMNTOOLS)vsvars32" && msbuild $(HOST).vcxproj    /p:Configuration=Debug
-	"$(VS140COMNTOOLS)vsvars32" && msbuild $(TARGET0).vcxproj /p:Configuration=Debug
-	"$(VS140COMNTOOLS)vsvars32" && msbuild $(TARGET1).vcxproj /p:Configuration=Debug
+	"$(VS140COMNTOOLS)vsvars32" && msbuild $(HOST).vcxproj    /p:Configuration=$(CONFIGURATION)    /p:Platform=$(PLATFORM)
+	"$(VS140COMNTOOLS)vsvars32" && msbuild $(TARGET0).vcxproj /p:Configuration=$(CONFIGURATION)    /p:Platform=$(PLATFORM)
+	"$(VS140COMNTOOLS)vsvars32" && msbuild $(TARGET1).vcxproj /p:Configuration=$(CONFIGURATION)    /p:Platform=$(PLATFORM)
+#	"$(VS140COMNTOOLS)vsvars32" && msbuild $(HOST).vcxproj    /p:Configuration=Release    /p:Platform=$(PLATFORM)
+#	"$(VS140COMNTOOLS)vsvars32" && msbuild $(TARGET0).vcxproj /p:Configuration=Release    /p:Platform=$(PLATFORM)
+#	"$(VS140COMNTOOLS)vsvars32" && msbuild $(TARGET1).vcxproj /p:Configuration=Release    /p:Platform=$(PLATFORM)
 
 $(HOST).vcproj $(TARGET0).vcproj $(TARGET1).vcproj:
 	premake5 vs2005
@@ -40,13 +45,13 @@ run:
 	$(MAKE) -j4 runhost runtarget0  runtarget1 
 
 runhost: $(HOST)
-	bin\x86\Debug\$(HOST)-x86d
+	bin\$(PLATFORM)\$(CONFIGURATION)\$(HOST)-$(PLATFORM)
 	
 runtarget0: $(TARGET0) 
-	bin\x86\Debug\$(TARGET0)-x86d
+	bin\$(PLATFORM)\$(CONFIGURATION)\$(TARGET0)-$(PLATFORM)
 	
 runtarget1: $(TARGET1) 
-	bin\x86\Debug\$(TARGET1)-x86d
+	bin\$(PLATFORM)\$(CONFIGURATION)\$(TARGET1)-$(PLATFORM)
 	
 
 include $(ROOT)/clean.mk
