--- a/2nmc-demo-gcc/make_mc12101/Makefile
+++ b/2nmc-demo-gcc/make_mc12101/Makefile
@@ -11,36 +11,54 @@ ifndef MC12101
 $(warning *** WARNING: 'MC12101' environment variable is not defined! Board SDK might not have installed correctly. )
 endif 
 
+PLATFORM ?= x64
+CONFIGURATION ?= Release
+ifdef DEBUG
+CONFIGURATION = Debug
+endif
 BOARD    = mc12101
-HOST     = $(BOARD)-x86
+HOST     = $(BOARD)-host
 
-TARGET0  = main0.abs
-TARGET1  = main1.abs
+TARGET0 ?= main0.abs
+TARGET1 ?= main1.abs
+ifdef DEBUG
+TARGET0 ?= main0d.abs
+TARGET1 ?= main1d.abs
+endif
 
 VS ?= vs2015 
 #PATH:=$(MC12101)/bin;$(PATH)
 all: $(TARGET0) $(TARGET1)  $(HOST)
 
 nm0 $(TARGET0): 
-	$(MAKE) -f Makefile0 
+ifdef DEBUG
+	$(MAKE) -f Makefile0 DEBUG=y
+else
+	$(MAKE) -f Makefile0
+endif
 
 nm1 $(TARGET1):
+ifdef DEBUG
+	$(MAKE) -f Makefile1 DEBUG=y
+else
 	$(MAKE) -f Makefile1
+endif
 	
 host $(HOST): $(VS)
 
-proflist: proflist0 proflist1
-proflist0:
-	$(MAKE) -f Makefile0 proflist
-proflist1:
-	$(MAKE) -f Makefile1 proflist
+profile: profile0 profile1
+profile0:
+	$(MAKE) -f Makefile0 profile
+profile1:
+	$(MAKE) -f Makefile1 profile
 	
 	
 vs2005: $(HOST).vcproj 
 	"$(VS80COMNTOOLS)vsvars32" && vcbuild $(HOST).vcproj
 
 vs2015:	$(HOST).vcxproj
-	"$(VS140COMNTOOLS)vsvars32" && msbuild $(HOST).vcxproj /p:Configuration=Debug
+	"$(VS140COMNTOOLS)vsvars32" && msbuild $(HOST).vcxproj /p:Configuration=Release /p:Platform=x64
+#	"$(VS140COMNTOOLS)vsvars32" && msbuild $(HOST).vcxproj /p:Configuration=Debug /p:Platform=x64
 
 $(HOST).vcproj:
 	premake5 vs2005
@@ -50,6 +68,6 @@ $(HOST).vcxproj:
 
 
 run: $(TARGET0) $(TARGET1) $(HOST)
-	bin\debug\$(HOST)
+	bin\$(PLATFORM)\$(CONFIGURATION)\$(HOST)-$(PLATFORM)
 	
 include $(ROOT)/clean.mk
