--- a/2nmc-demo-gcc/make_mc12101/Makefile1
+++ b/2nmc-demo-gcc/make_mc12101/Makefile1
@@ -1,3 +1,4 @@
+ROOT = ../..
 ###########################################################################################
 # (RC)Module 7/8/2015
 #
@@ -46,24 +47,39 @@
 #============== PROJECT & BUILD CONFIGURATION ==========
 #
 
-ROOT             = ../..
 include $(ROOT)/global.mk
 include 		 nmc4vars_win.mk
 #-------------- target & input dirs -------------------
+PROFILE			 = ../src_target1/proflist_generated1.asm
 PROJECT          = main1
+ifdef DEBUG
+PROJECT 		 = main1d
+endif
 OUT_DIR          = .
 TARGET           = $(OUT_DIR)/$(PROJECT).abs
 INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include
-SRC_DIRS         = $(ROOT)/nmglvs_mc12101-gcc/src_nmc1 $(ROOT)/src_proc1/common $(ROOT)/src_proc $(ROOT)/src_proc1/nm ../src_target1 ./
+SRC_DIRS         = $(ROOT)/nmglvs_mc12101-gcc/src_nmc1 $(ROOT)/src_proc1/common $(ROOT)/src_proc $(ROOT)/src_proc1/nm ../src_target1
 LIB_DIRS         = -L "$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib"
+ifdef DEBUG
+TMP_DIR          = Debug
+else
 TMP_DIR          = Release
+endif
 #-------------- RELEASE/ALL config -------------------
 CC 				 = nmc-g++
+CC_FLAGS		 = -O2 -fno-builtin-printf -std=c++11
 AS               = nmc-gcc 				 
 AS_FLAGS    	 = -c -mmas -x assembler -Wa,-split_sir -mnmc4-fixed
 LIBS             = -lnmpp-nmc4 -lhal-mc12101
-#LINKER_FLAGS     = -nostartfiles "$(NMC_GCC_TOOLPATH)/nmc4-ide/nmc/lib/nmc4/crti.o" "$(NMC_GCC_TOOLPATH)/nmc4-ide/nmc/lib/nmc4/crtn.o" -Xlinker -Map=.main1.map $(LIB_DIRS) "-Wl,-cmc12101brd-nmc1.cfg"  -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET)
-LINKER_FLAGS     = -Xlinker -Map=.main1.map $(LIB_DIRS) "-Wl,-Tldscript-nmc1.ld"  -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET)
+MAP		         = $(PROJECT).map
+CFG				 = ldscript-nmc1.ld
+LINKER_FLAGS     = -Xlinker -Map=$(MAP) $(LIB_DIRS) "-Wl,-T$(CFG)"  -Wl,--whole-archive -lmc12101 -Wl,--no-whole-archive -o$(TARGET)
+
+ifeq ($(DEBUG),y)
+	CC_FLAGS	+= -DDEBUG
+else
+	CC_FLAGS	+= -DNDEBUG
+endif
 #=================== SOURCE & OBJECTS COLLECTION ===========================
 
 .SUFFIXES:
@@ -81,6 +97,7 @@ OBJECTS_CPP = $(notdir $(patsubst %.cpp,%.o,$(ALL_CPP)))
 OBJECTS_ASM = $(notdir $(patsubst %.asm,%.o,$(ALL_ASM)))
 OBJECTS_C   = $(notdir $(patsubst %.c,%.o,$(ALL_C)))
 OBJECTS     = $(addprefix $(TMP_DIR)/, $(OBJECTS_C) $(OBJECTS_CPP)  $(OBJECTS_ASM))
+$(info "===" $(OBJECTS_C))
 
 #======================== BUILD RULES ====================================
 .PHONY:all  clean skip
@@ -104,16 +121,13 @@ $(TMP_DIR)/dumps:
 	mkdir $(TMP_DIR)\dumps
 	
 $(TMP_DIR)/dumps/%.dump: $(TMP_DIR)/%.o
-	nmc-objdump $< -d -t -x -a >> $@
+	nmc-objdump $< -d -S -x >> $@
 	
-	
-	
-
 	
 $(TMP_DIR):
 	-mkdir "$(@)"
 
-$(TARGET): $(TMP_DIR) $(OBJECTS) $(ALL_H)  nmc4vars_win.mk Makefile1
+$(TARGET): $(TMP_DIR) $(OBJECTS) $(CFG) nmc4vars_win.mk Makefile $(ALL_H)
 	$(CC) $(LINKER_FLAGS) $(OBJECTS) $(LIBS)
 
 nmc4vars_win.mk:
@@ -122,22 +136,25 @@ nmc4vars_win.mk:
 $(OUT_DIR): 
 	-mkdir "$(@)"
 	
-$(TMP_DIR)/%.o: %.asm 
+$(TMP_DIR)/%.o: %.asm  $(ALL_H) $(CFG)
 	$(AS) $(AS_FLAGS) $(<) -o$(@) $(INC_DIRS)
 	
-$(TMP_DIR)/%.o: %.cpp 
-	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS) -O2
+$(TMP_DIR)/%.o: %.cpp  $(ALL_H) $(CFG)
+	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS)
 
-$(TMP_DIR)/%.o: %.c
-	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS) -O2
+$(TMP_DIR)/%.o: %.c $(ALL_H) $(CFG)
+	$(CC) $(CC_FLAGS) -c $(<) -o$(@) $(INC_DIRS)
 	
-proflist:
-	lua53 $(HAL)/script/profiler-gcc.lua .main1.map > proflist_generated1.asm 
+profile:	
+	python $(HAL)/script/profiler.py > $(PROFILE)
+	$(MAKE)
+	python $(HAL)/script/profiler-gcc.py $(MAP) > $(PROFILE)
+	
 
 #========================== Visual Studio  ===================
 export ALL_CPP ALL_ASM ALL_C ALL_H
 
-PROVIDER = host-x86
+PROVIDER = host-x64
 
 $(PROVIDER).vcxproj :	premake5.lua 
 	premake5 vs2015
