Fix nmgltex_tests x86 build & 'make run' for debug x86 apps
* There were build errors for x86 version of unit tests for
 interface (nmglTex...) texture functions (app/nmgltex_tests/make_x86).
 The reason of build error was that Makefile and premake5.lua files were not
 corrected to use x64 version of libraries (vshell). To fix errors Makefile
 and premake file have been corrected according to
 app/template/project/make_x86/ Makefile and premake5.lua.

* There were errors in 'make run' command for Debug x86 versions of
  several applications:
  	* app/template/project.
	* app/template/projectdebug
	* app/nmgltex_tests/
	* drawLineTest
	* 2nmc-demo-gcc
	* 2nmc-demo-gcc-example
  The reason of errors was that "run" target in Makefile didn't take in
  account targetsuffix 'd' generated in premake5.lua. To fix this error
  Makefile variable TARGET_SUFFIX has been added.

--- a/2nmc-demo-gcc-example/make_x86/Makefile
+++ b/2nmc-demo-gcc-example/make_x86/Makefile
@@ -13,6 +13,12 @@ TARGET0   = demo3d-target0
 TARGET1   = demo3d-target1
 HOST      = demo3d-host
 
+ifeq ($(CONFIGURATION),Debug)
+	TARGET_SUFFIX = d
+else
+	TARGET_SUFFIX = 
+endif
+
 VS ?=vs2015
 ALL: $(VS)
 .PHONY = vs2005 vs2015
@@ -45,13 +51,13 @@ run:
 	$(MAKE) -j4 runhost runtarget0  runtarget1 
 
 runhost: $(HOST)
-	bin\$(PLATFORM)\$(CONFIGURATION)\$(HOST)-$(PLATFORM)
+	bin\$(PLATFORM)\$(CONFIGURATION)\$(HOST)-$(PLATFORM)$(TARGET_SUFFIX)
 	
 runtarget0: $(TARGET0) 
-	bin\$(PLATFORM)\$(CONFIGURATION)\$(TARGET0)-$(PLATFORM)
+	bin\$(PLATFORM)\$(CONFIGURATION)\$(TARGET0)-$(PLATFORM)$(TARGET_SUFFIX)
 	
 runtarget1: $(TARGET1) 
-	bin\$(PLATFORM)\$(CONFIGURATION)\$(TARGET1)-$(PLATFORM)
+	bin\$(PLATFORM)\$(CONFIGURATION)\$(TARGET1)-$(PLATFORM)$(TARGET_SUFFIX)
 	
 
 include $(ROOT)/clean.mk
