--- a/texture-demo-gcc/make_mc12101/Makefile0
+++ b/texture-demo-gcc/make_mc12101/Makefile0
@@ -62,7 +62,7 @@ LIB_DIRS         = -L"$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL
 TMP_DIR          = Release
 #-------------- RELEASE/ALL config -------------------
 CC 				 = nmc-g++
-CC_FLAGS	 	 = -O2 -fno-builtin-printf -std=c++11 -mnmc4-float
+CC_FLAGS	 	 = -O0 -fno-builtin-printf -std=c++11 -mnmc4-float -DTEXTURE_ENABLED
 AS               = nmc-gcc 				 
 AS_FLAGS    	 = -c -mmas -x assembler -mnmc4-float
 LIBS             = -lnmpp-nmc4f -lhal-mc12101 
