Common Refactoring code, added modifications, simplified code. Modification Makefiles. Debug and Release are compiled separately from each other. Removed PolygonsOld and Polygons. Now DataForNmpu1 only exist. Added description many functions.
NM0
buffer5 is now always present, but used only textures as it was
Cullface is done before triangulation. Triangulation doesn't need to preserve bypass direction now.
Added stacktrace.

NM1
modified interface drawTriangles, drawLines and drawPoints

--- a/2nmc-demo-gcc-example/make_mc12101/Makefile0
+++ b/2nmc-demo-gcc-example/make_mc12101/Makefile0
@@ -136,7 +136,7 @@ $(TMP_DIR)/%.o: %.c  $(ALL_H) $(CFG)
 profile:	
 	python $(HAL)/script/profiler.py > $(PROFILE)
 	$(MAKE)
-	python $(HAL)/script/profiler-gcc.py $(MAP) > $(PROFILE)
+	python $(HAL)/script/profiler.py $(MAP) > $(PROFILE)
 	
 
 #========================== Visual Studio  ===================
