--- a/app/templates/projectdebug/make_mc12101/Makefile1
+++ b/app/templates/projectdebug/make_mc12101/Makefile1
@@ -46,13 +46,16 @@ ROOT = ../..
 
 #============== PROJECT & BUILD CONFIGURATION ==========
 #
-DEBUG ?= n
+
 
 include $(ROOT)/global.mk
 include 		 nmc4vars_win.mk
 #-------------- target & input dirs -------------------
 PROFILE			 = ../src_target1/proflist_generated1.asm
 PROJECT          = main1
+ifdef DEBUG
+PROJECT 		 = main1d
+endif
 OUT_DIR          = .
 TARGET           = $(OUT_DIR)/$(PROJECT).abs
 INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include
@@ -141,7 +144,7 @@ $(TMP_DIR)/%.o: %.c $(ALL_H) $(CFG)
 profile:	
 	python $(HAL)/script/profiler.py > $(PROFILE)
 	$(MAKE)
-	python $(HAL)/script/profiler-gcc.py $(MAP) > $(PROFILE)
+	python $(HAL)/script/profiler.py $(MAP) > $(PROFILE)
 	
 
 #========================== Visual Studio  ===================
