--- a/app/nmgltex_tests/make_mc12101/Makefile1
+++ b/app/nmgltex_tests/make_mc12101/Makefile1
@@ -130,7 +130,7 @@ $(TMP_DIR)/%.o: %.c $(ALL_H)
 profile:	
 	python $(HAL)/script/profiler.py > $(PROFILE)
 	$(MAKE)
-	python $(HAL)/script/profiler-gcc.py $(MAP) > $(PROFILE)
+	python $(HAL)/script/profiler.py $(MAP) > $(PROFILE)
 	
 
 #========================== Visual Studio  ===================
