--- a/drawLineTest/make_mc12101/Makefile0
+++ b/drawLineTest/make_mc12101/Makefile0
@@ -52,6 +52,9 @@ include 		 nmc4vars_win.mk
 #-------------- target & input dirs -------------------
 PROFILE			 = ../src_target0/proflist_generated0.asm
 PROJECT          = main0
+ifdef DEBUG
+PROJECT 		 = main0d
+endif
 OUT_DIR          = .
 TARGET           = $(OUT_DIR)/$(PROJECT).abs
 INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include
@@ -141,7 +144,7 @@ $(TMP_DIR)/%.o: %.c $(ALL_H)
 profile:	
 	python $(HAL)/script/profiler.py > $(PROFILE)
 	$(MAKE)
-	python $(HAL)/script/profiler-gcc.py $(MAP) > $(PROFILE)
+	python $(HAL)/script/profiler.py $(MAP) > $(PROFILE)
 	
 
 #========================== Visual Studio  ===================
