--- a/2nmc-demo-gcc/make_mc12101/Makefile1
+++ b/2nmc-demo-gcc/make_mc12101/Makefile1
@@ -103,17 +103,15 @@ $(info "===" $(OBJECTS_C))
 .PHONY:all  clean skip
 
 .DEFAULT_GOAL=default
-default: $(PROFILE) $(TARGET)
+default: $(TARGET)
 
 #$(TMP_DIR) $(OUT_DIR)  $(TARGET)
 
-all: $(TARGET)
+all: $(TARGET) dump
 	
 #	$(MAKE) -j4 DEBUG=y
 #	$(MAKE) -j4
 
-dump:
-	nmc-objdump -D $(PROJECT).abs > $(PROJECT).dasm
 	
 $(TMP_DIR):
 	-mkdir "$(@)"
