--- a/2nmc-demo-gcc/make_mc12101/Makefile0
+++ b/2nmc-demo-gcc/make_mc12101/Makefile0
@@ -61,9 +61,9 @@ INC_DIRS         = -I"$(NMPP)/include" -I$(HAL)/include -I$(ROOT)/include
 SRC_DIRS         = $(ROOT)/nmglvs_mc12101-gcc/src_nmc0 $(ROOT)/src_proc0/common $(ROOT)/src_proc0/nm $(ROOT)/src_proc0/nmgl ../src_target0
 LIB_DIRS         = -L"$(NMC_GCC_TOOLPATH)/nmc4-ide/lib" -L"$(NMPP)/lib" -L"$(HAL)/lib"
 ifdef DEBUG
-TMP_DIR          = Debug
+TMP_DIR          = Debug/nmc1
 else
-TMP_DIR          = Release
+TMP_DIR          = Release/nmc1
 endif
 #-------------- RELEASE/ALL config -------------------
 CC 				 = nmc-g++
